--- a/springcloudeureka/pom.xml
+++ b/springcloudeureka/pom.xml
@@ -8,11 +8,20 @@
     <artifactId>springcloud-eureka</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <name>eureka-server-client</name>
     <description>Demo project for SpringCloud eureka</description>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+        <relativePath/>
+    </parent>
 
     <modules>
         <module>eureka-server</module>
-        <module>service-hi</module>
+        <module>eureka-client</module>
     </modules>
 
     <properties>
