--- a/springcloudeureka/eureka-client/src/main/resources/application.yml
+++ b/springcloudeureka/eureka-client/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8762
+  port: 8763
 
 spring:
   application:
-    name: service-hi
+    name: service-client
 
 eureka:
   client:
