--- a/springcloudeureka/eureka-server/src/main/resources/application.yml
+++ b/springcloudeureka/eureka-server/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8761
 
+# 通过eureka.client.registerWithEureka：false和fetchRegistry：false
+#来表明自己是一个eureka server
 eureka:
   instance:
     hostname: localhost
