--- a/springcloudeureka/service-feign/pom.xml
+++ b/springcloudeureka/service-feign/pom.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-ribbon</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>service-ribbon</name>
-    <description>Demo project for Spring Boot</description>
-
     <parent>
         <groupId>com.example</groupId>
         <artifactId>springcloud-eureka</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>service-feign</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>service-feign</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
