--- a/springcloud/eureka-server/pom.xml
+++ b/springcloud/eureka-server/pom.xml
@@ -13,7 +13,7 @@
 
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>springcloud-eureka</artifactId>
+        <artifactId>springcloud-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
