--- a/springcloud/service-feign/pom.xml
+++ b/springcloud/service-feign/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>springcloud-eureka</artifactId>
+        <artifactId>springcloud-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
