--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -23,6 +23,8 @@
         <module>eureka-server</module>
         <module>eureka-client</module>
         <module>service-ribbon</module>
+        <module>service-feign</module>
+        <module>service-zuul</module>
     </modules>
 
     <properties>
