--- a/springboot/src/main/resources/application.yml
+++ b/springboot/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
 
 server:
   port: 8080
+
+personal:
+  name: keweizhou
+  age: 25
+  uuid: ${random.uuid}
+  hello: hello, i'm ${personal.name}, and ${personal.age}
